--- a/src/Web/Web.csproj
+++ b/src/Web/Web.csproj
@@ -7,6 +7,8 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
+    <PackageReference Include="Google.Cloud.Firestore" Version="1.0.0-beta06" />
+
   </ItemGroup>
 
   <ItemGroup>
